--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+
+    <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar2"
@@ -21,8 +18,14 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="1dp" />
 
-        <Button
-            android:id="@+id/viewCourse"
+    <TextView
+        android:id="@+id/hello_msg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
+    <Button
+            android:id="@+id/course_button"
             android:layout_width="273dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -33,7 +36,7 @@
             tools:layout_editor_absoluteY="187dp" />
 
         <Button
-            android:id="@+id/editCourse"
+            android:id="@+id/edit_button"
             android:layout_width="273dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center|fill_vertical"
@@ -42,7 +45,7 @@
             tools:layout_editor_absoluteX="64dp"
             tools:layout_editor_absoluteY="318dp" />
         <Button
-            android:id="@+id/viewAssignments"
+            android:id="@+id/assignment_button"
             android:layout_width="273dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center|fill_vertical"
@@ -52,7 +55,7 @@
             tools:layout_editor_absoluteY="318dp" />
 
         <Button
-            android:id="@+id/back_exit"
+            android:id="@+id/back_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -60,5 +63,4 @@
             tools:layout_editor_absoluteX="161dp"
             tools:layout_editor_absoluteY="457dp" />
 
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
