Menu buttons all done

--- a/app/src/main/res/layout/menumain_activity.xml
+++ b/app/src/main/res/layout/menumain_activity.xml
@@ -19,17 +19,28 @@
             tools:layout_editor_absoluteX="1dp" />
 
     <Button
-            android:id="@+id/course_button"
-            android:layout_width="273dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="210dp"
-            android:layout_marginBottom="10dp"
-            android:text="Enrollment"
-            tools:layout_editor_absoluteX="78dp"
-            tools:layout_editor_absoluteY="187dp" />
+        android:id="@+id/course_button"
+        android:layout_width="273dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="10dp"
+        android:text="Enrollment"
+        tools:layout_editor_absoluteX="78dp"
+        tools:layout_editor_absoluteY="187dp" />
 
-        <Button
+    <Button
+        android:id="@+id/courseView_button"
+        android:layout_width="273dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:text="Courses"
+        tools:layout_editor_absoluteX="78dp"
+        tools:layout_editor_absoluteY="187dp" />
+
+    <Button
             android:id="@+id/edit_button"
             android:layout_width="273dp"
             android:layout_height="wrap_content"
@@ -38,6 +49,7 @@
             android:text="Edit Courses"
             tools:layout_editor_absoluteX="64dp"
             tools:layout_editor_absoluteY="318dp" />
+
         <Button
             android:id="@+id/assignment_button"
             android:layout_width="273dp"
@@ -47,7 +59,25 @@
             android:text="Assignments"
             tools:layout_editor_absoluteX="64dp"
             tools:layout_editor_absoluteY="318dp" />
+    <Button
+        android:id="@+id/assignmentEdit_button"
+        android:layout_width="273dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|fill_vertical"
+        android:layout_marginBottom="10dp"
+        android:text="Edit Assignments"
+        tools:layout_editor_absoluteX="64dp"
+        tools:layout_editor_absoluteY="318dp" />
 
+    <Button
+        android:id="@+id/gradesView_button"
+        android:layout_width="273dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|fill_vertical"
+        android:layout_marginBottom="10dp"
+        android:text="View Grades"
+        tools:layout_editor_absoluteX="64dp"
+        tools:layout_editor_absoluteY="318dp" />
         <Button
             android:id="@+id/back_button"
             android:layout_width="wrap_content"
