--- a/app/src/main/res/layout/menumain_activity.xml
+++ b/app/src/main/res/layout/menumain_activity.xml
@@ -18,6 +18,14 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="1dp" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity = "center"
+        android:textSize="30dp"
+        android:id="@+id/welcome_user_msg"
+        android:text=""/>
+
     <Button
         android:id="@+id/course_button"
         android:layout_width="273dp"
