--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -41,7 +43,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/username"/>
+        android:id="@+id/username_main"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -51,13 +53,13 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/password"/>
+        android:id="@+id/password_main"/>
     <Button
         android:layout_width="273dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center|fill_vertical"
         android:text="Login"
-        android:id="@+id/loginbutton"/>
+        android:id="@+id/loginbutton_main"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="100dp"
