--- a/app/src/main/res/layout/deletecourse_activity.xml
+++ b/app/src/main/res/layout/deletecourse_activity.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -26,12 +27,12 @@
 
         <TextView
             android:layout_width="300dp"
-            android:layout_height="wrap_content"
+            android:layout_height="29dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="200dp"
-            android:textStyle="bold"
+            android:text="Enter Course ID: "
             android:textAlignment="center"
-            android:text="Enter Course ID: " />
+            android:textStyle="bold" />
 
         <EditText
             android:layout_width="100dp"
