--- a/app/src/main/res/layout/menumain_activity.xml
+++ b/app/src/main/res/layout/menumain_activity.xml
@@ -81,11 +81,11 @@
         android:id="@+id/gradesView_button"
         android:layout_width="273dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center|fill_vertical"
+        android:layout_gravity="center"
         android:layout_marginBottom="10dp"
         android:text="View Grades"
-        tools:layout_editor_absoluteX="64dp"
-        tools:layout_editor_absoluteY="318dp" />
+        tools:layout_editor_absoluteX="78dp"
+        tools:layout_editor_absoluteY="187dp" />
 
     <Button
         android:id="@+id/back_button"
