--- a/app/src/main/res/layout/activity_view_grade2.xml
+++ b/app/src/main/res/layout/activity_view_grade2.xml
@@ -50,6 +50,13 @@
         android:layout_height="120dp"
         android:layout_weight="1" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/design_default_color_secondary"
+        android:textSize="18dp"
+        android:id="@+id/grade_letter"
+        android:text=""/>
     <Button
         android:id="@+id/back_button_grade"
         android:layout_width="wrap_content"
