--- a/app/src/main/res/layout/menumain_activity.xml
+++ b/app/src/main/res/layout/menumain_activity.xml
@@ -26,16 +26,6 @@
         android:id="@+id/welcome_user_msg"
         android:text=""/>
 
-    <Button
-        android:id="@+id/course_button"
-        android:layout_width="273dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="10dp"
-        android:text="Enrollment"
-        tools:layout_editor_absoluteX="78dp"
-        tools:layout_editor_absoluteY="187dp" />
 
     <Button
         android:id="@+id/courseView_button"
@@ -44,19 +34,21 @@
         android:layout_gravity="center"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
-        android:text="Courses"
+        android:text="View Courses"
         tools:layout_editor_absoluteX="78dp"
         tools:layout_editor_absoluteY="187dp" />
 
+
     <Button
-            android:id="@+id/edit_button"
-            android:layout_width="273dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|fill_vertical"
-            android:layout_marginBottom="10dp"
-            android:text="Edit Courses"
-            tools:layout_editor_absoluteX="64dp"
-            tools:layout_editor_absoluteY="318dp" />
+        android:id="@+id/enrollment_button"
+        android:layout_width="273dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:text="Enroll in Course"
+        tools:layout_editor_absoluteX="78dp"
+        tools:layout_editor_absoluteY="187dp" />
 
         <Button
             android:id="@+id/assignment_button"
@@ -64,18 +56,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center|fill_vertical"
             android:layout_marginBottom="10dp"
-            android:text="Assignments"
+            android:text="View Assignments"
             tools:layout_editor_absoluteX="64dp"
             tools:layout_editor_absoluteY="318dp" />
-    <Button
-        android:id="@+id/assignmentEdit_button"
-        android:layout_width="273dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|fill_vertical"
-        android:layout_marginBottom="10dp"
-        android:text="Edit Assignments"
-        tools:layout_editor_absoluteX="64dp"
-        tools:layout_editor_absoluteY="318dp" />
 
     <Button
         android:id="@+id/gradesView_button"
