--- a/app/src/main/res/layout/admin_menu.xml
+++ b/app/src/main/res/layout/admin_menu.xml
@@ -94,7 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Back"
+        android:text="logout"
         tools:layout_editor_absoluteX="161dp"
         tools:layout_editor_absoluteY="457dp" />
 
