--- a/app/src/main/res/layout/addcourse.xml
+++ b/app/src/main/res/layout/addcourse.xml
@@ -8,45 +8,33 @@
 
     <TextView
         android:id="@+id/textViewTitle"
-        android:layout_width="251dp"
-        android:layout_height="18dp"
+        android:layout_width="279dp"
+        android:layout_height="51dp"
         android:layout_marginStart="64dp"
-        android:layout_marginLeft="64dp"
         android:layout_marginTop="102dp"
         android:layout_marginEnd="96dp"
-        android:layout_marginRight="96dp"
         android:layout_marginBottom="611dp"
         android:text="@string/add_course_information"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/course_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="118dp"
-        android:layout_marginLeft="118dp"
         android:layout_marginTop="137dp"
+        android:layout_marginEnd="83dp"
+        android:layout_marginBottom="549dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="@string/enter1"
+        android:hint="Course ID"
         android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textViewCourseId"
-        android:layout_width="89dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="35dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="151dp"
-        android:layout_marginEnd="306dp"
-        android:layout_marginRight="306dp"
-        android:layout_marginBottom="560dp"
-        android:text="@string/course_id"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,68 +45,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="116dp"
-        android:layout_marginLeft="116dp"
         android:layout_marginTop="198dp"
         android:layout_marginEnd="85dp"
-        android:layout_marginRight="85dp"
         android:layout_marginBottom="488dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="@string/enter2"
+        android:hint="Instructor"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textViewInstructor"
-        android:layout_width="86dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginLeft="36dp"
-        android:layout_marginTop="208dp"
-        android:layout_marginEnd="305dp"
-        android:layout_marginRight="305dp"
-        android:layout_marginBottom="497dp"
-        android:text="@string/instructor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.75"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/course_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="119dp"
-        android:layout_marginLeft="119dp"
         android:layout_marginTop="262dp"
         android:layout_marginEnd="83dp"
-        android:layout_marginRight="83dp"
         android:layout_marginBottom="424dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="@string/enter3"
+        android:hint="Course Title"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textViewCourseTitle"
-        android:layout_width="84dp"
-        android:layout_height="31dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginLeft="26dp"
-        android:layout_marginTop="266dp"
-        android:layout_marginEnd="301dp"
-        android:layout_marginRight="301dp"
-        android:layout_marginBottom="434dp"
-        android:text="@string/course_title"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -129,31 +79,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="115dp"
-        android:layout_marginLeft="115dp"
         android:layout_marginTop="323dp"
         android:layout_marginEnd="86dp"
-        android:layout_marginRight="86dp"
         android:layout_marginBottom="363dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="@string/enter4"
+        android:hint="Discription"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textViewDiscription"
-        android:layout_width="78dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginLeft="27dp"
-        android:layout_marginTop="324dp"
-        android:layout_marginEnd="306dp"
-        android:layout_marginRight="306dp"
-        android:layout_marginBottom="377dp"
-        android:text="@string/discription"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -220,10 +152,10 @@
         android:text="back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintHorizontal_bias="0.089"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.843" />
+        app:layout_constraintVertical_bias="0.956" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
