--- a/app/src/main/res/layout/add_assignment.xml
+++ b/app/src/main/res/layout/add_assignment.xml
@@ -151,12 +151,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="11dp"
-        android:layout_marginTop="666dp"
+        android:layout_marginTop="619dp"
         android:layout_marginEnd="312dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginBottom="64dp"
         android:text="BACK"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
