--- a/app/src/main/res/layout/delete_assignments.xml
+++ b/app/src/main/res/layout/delete_assignments.xml
@@ -7,24 +7,25 @@
 
     <TextView
         android:id="@+id/textViewDeleteAssignment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="201dp"
+        android:layout_height="33dp"
         android:layout_marginStart="118dp"
         android:layout_marginTop="127dp"
         android:layout_marginEnd="175dp"
         android:layout_marginBottom="585dp"
         android:text="Delete Assignment"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.156"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/deleteAssignmentId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="301dp"
+        android:layout_height="67dp"
         android:layout_marginStart="71dp"
         android:layout_marginTop="191dp"
         android:layout_marginEnd="130dp"
@@ -34,13 +35,15 @@
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.154"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/submitBtn"
-        android:layout_width="143dp"
-        android:layout_height="41dp"
+        android:layout_width="228dp"
+        android:layout_height="47dp"
         android:layout_marginStart="103dp"
         android:layout_marginTop="264dp"
         android:layout_marginEnd="165dp"
@@ -48,16 +51,23 @@
         android:text="SUBMIT"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.27"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/backBtn"
         android:layout_width="125dp"
         android:layout_height="46dp"
-        android:layout_marginTop="672dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="569dp"
         android:layout_marginEnd="274dp"
+        android:layout_marginBottom="116dp"
         android:text="Back"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
